The browser crashes when viewing a page using the WebGPU
Categories
(Core :: Graphics: WebGPU, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox90 | --- | fixed |
People
(Reporter: y-shimano, Assigned: kvark)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/537.36
Steps to reproduce:
I enabled WebGPU in Firefox Nightly and tried to access the following site.
I have enabled dom.webgpu.enabled and gfx.webrender.all as Firefox Nightly settings.
https://playground.babylonjs.com/indexWebGPU.html
Actual results:
browser has crashed.
Expected results:
I was hoping that the page would show up without crashing.
Comment 1•5 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
Updated•5 years ago
|
Assignee | ||
Comment 2•4 years ago
|
||
Something funky going on here. The swapchain is created at a small size, but then by the time our buffer reaches presentation, it's larger size. So likely that it got resized, and our code doesn't properly check for this.
Assignee | ||
Comment 3•4 years ago
|
||
we recreate the swapchain on the size change
Updated•4 years ago
|
Comment 5•4 years ago
|
||
bugherder |
Description
•