Bug 1637972 - WebGPU handle canvas resize r=aosmond

we recreate the swapchain on the size change

Differential Revision: https://phabricator.services.mozilla.com/D113172